src/parsing/HTTPParser.cpp

// Generated from HTTP.g4 by ANTLR 4.9.3


#include "HTTPListener.h"

#include "HTTPParser.h"


using namespace antlrcpp;
using namespace sylvanmats;
using namespace antlr4;

HTTPParser::HTTPParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HTTPParser::~HTTPParser() {
  delete _interpreter;
}

std::string HTTPParser::getGrammarFileName() const {
  return "HTTP.g4";
}

const std::vector<std::string>& HTTPParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HTTPParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Http_messageContext ------------------------------------------------------------------

HTTPParser::Http_messageContext::Http_messageContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HTTPParser::Start_lineContext* HTTPParser::Http_messageContext::start_line() {
  return getRuleContext<HTTPParser::Start_lineContext>(0);
}

std::vector<HTTPParser::Header_fieldContext *> HTTPParser::Http_messageContext::header_field() {
  return getRuleContexts<HTTPParser::Header_fieldContext>();
}

HTTPParser::Header_fieldContext* HTTPParser::Http_messageContext::header_field(size_t i) {
  return getRuleContext<HTTPParser::Header_fieldContext>(i);
}

std::vector<tree::TerminalNode *> HTTPParser::Http_messageContext::CRLF() {
  return getTokens(HTTPParser::CRLF);
}

tree::TerminalNode* HTTPParser::Http_messageContext::CRLF(size_t i) {
  return getToken(HTTPParser::CRLF, i);
}

std::vector<tree::TerminalNode *> HTTPParser::Http_messageContext::EOF() {
  return getTokens(HTTPParser::EOF);
}

tree::TerminalNode* HTTPParser::Http_messageContext::EOF(size_t i) {
  return getToken(HTTPParser::EOF, i);
}


size_t HTTPParser::Http_messageContext::getRuleIndex() const {
  return HTTPParser::RuleHttp_message;
}

void HTTPParser::Http_messageContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHttp_message(this);
}

void HTTPParser::Http_messageContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHttp_message(this);
}

HTTPParser::Http_messageContext* HTTPParser::http_message() {
  Http_messageContext *_localctx = _tracker.createInstance<Http_messageContext>(_ctx, getState());
  enterRule(_localctx, 0, HTTPParser::RuleHttp_message);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    start_line();
    setState(56);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HTTPParser::ALPHA)
      | (1ULL << HTTPParser::DIGIT)
      | (1ULL << HTTPParser::Minus)
      | (1ULL << HTTPParser::Underscore)
      | (1ULL << HTTPParser::Tilde)
      | (1ULL << HTTPParser::ExclamationMark)
      | (1ULL << HTTPParser::DollarSign)
      | (1ULL << HTTPParser::Hashtag)
      | (1ULL << HTTPParser::Ampersand)
      | (1ULL << HTTPParser::Percent)
      | (1ULL << HTTPParser::DQuote)
      | (1ULL << HTTPParser::SQuote)
      | (1ULL << HTTPParser::Star)
      | (1ULL << HTTPParser::Plus)
      | (1ULL << HTTPParser::Caret)
      | (1ULL << HTTPParser::BackQuote)
      | (1ULL << HTTPParser::VBar))) != 0)) {
      setState(51);
      header_field();
      setState(52);
      _la = _input->LA(1);
      if (!(_la == HTTPParser::EOF

      || _la == HTTPParser::CRLF)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(58);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(60);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(59);
      _la = _input->LA(1);
      if (!(_la == HTTPParser::EOF

      || _la == HTTPParser::CRLF)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Start_lineContext ------------------------------------------------------------------

HTTPParser::Start_lineContext::Start_lineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HTTPParser::Request_lineContext* HTTPParser::Start_lineContext::request_line() {
  return getRuleContext<HTTPParser::Request_lineContext>(0);
}


size_t HTTPParser::Start_lineContext::getRuleIndex() const {
  return HTTPParser::RuleStart_line;
}

void HTTPParser::Start_lineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart_line(this);
}

void HTTPParser::Start_lineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart_line(this);
}

HTTPParser::Start_lineContext* HTTPParser::start_line() {
  Start_lineContext *_localctx = _tracker.createInstance<Start_lineContext>(_ctx, getState());
  enterRule(_localctx, 2, HTTPParser::RuleStart_line);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    request_line();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Request_lineContext ------------------------------------------------------------------

HTTPParser::Request_lineContext::Request_lineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HTTPParser::MethodContext* HTTPParser::Request_lineContext::method() {
  return getRuleContext<HTTPParser::MethodContext>(0);
}

std::vector<tree::TerminalNode *> HTTPParser::Request_lineContext::OWS() {
  return getTokens(HTTPParser::OWS);
}

tree::TerminalNode* HTTPParser::Request_lineContext::OWS(size_t i) {
  return getToken(HTTPParser::OWS, i);
}

HTTPParser::Request_targetContext* HTTPParser::Request_lineContext::request_target() {
  return getRuleContext<HTTPParser::Request_targetContext>(0);
}

HTTPParser::Http_versionContext* HTTPParser::Request_lineContext::http_version() {
  return getRuleContext<HTTPParser::Http_versionContext>(0);
}

tree::TerminalNode* HTTPParser::Request_lineContext::CRLF() {
  return getToken(HTTPParser::CRLF, 0);
}


size_t HTTPParser::Request_lineContext::getRuleIndex() const {
  return HTTPParser::RuleRequest_line;
}

void HTTPParser::Request_lineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRequest_line(this);
}

void HTTPParser::Request_lineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRequest_line(this);
}

HTTPParser::Request_lineContext* HTTPParser::request_line() {
  Request_lineContext *_localctx = _tracker.createInstance<Request_lineContext>(_ctx, getState());
  enterRule(_localctx, 4, HTTPParser::RuleRequest_line);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    method();
    setState(65);
    match(HTTPParser::OWS);
    setState(66);
    request_target();
    setState(67);
    match(HTTPParser::OWS);
    setState(68);
    http_version();
    setState(69);
    match(HTTPParser::CRLF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodContext ------------------------------------------------------------------

HTTPParser::MethodContext::MethodContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HTTPParser::MethodContext::getRuleIndex() const {
  return HTTPParser::RuleMethod;
}

void HTTPParser::MethodContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMethod(this);
}

void HTTPParser::MethodContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMethod(this);
}

HTTPParser::MethodContext* HTTPParser::method() {
  MethodContext *_localctx = _tracker.createInstance<MethodContext>(_ctx, getState());
  enterRule(_localctx, 6, HTTPParser::RuleMethod);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HTTPParser::T__0)
      | (1ULL << HTTPParser::T__1)
      | (1ULL << HTTPParser::T__2)
      | (1ULL << HTTPParser::T__3)
      | (1ULL << HTTPParser::T__4)
      | (1ULL << HTTPParser::T__5)
      | (1ULL << HTTPParser::T__6)
      | (1ULL << HTTPParser::T__7))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Request_targetContext ------------------------------------------------------------------

HTTPParser::Request_targetContext::Request_targetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HTTPParser::Origin_formContext* HTTPParser::Request_targetContext::origin_form() {
  return getRuleContext<HTTPParser::Origin_formContext>(0);
}


size_t HTTPParser::Request_targetContext::getRuleIndex() const {
  return HTTPParser::RuleRequest_target;
}

void HTTPParser::Request_targetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRequest_target(this);
}

void HTTPParser::Request_targetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRequest_target(this);
}

HTTPParser::Request_targetContext* HTTPParser::request_target() {
  Request_targetContext *_localctx = _tracker.createInstance<Request_targetContext>(_ctx, getState());
  enterRule(_localctx, 8, HTTPParser::RuleRequest_target);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    origin_form();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Origin_formContext ------------------------------------------------------------------

HTTPParser::Origin_formContext::Origin_formContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HTTPParser::Absolute_pathContext* HTTPParser::Origin_formContext::absolute_path() {
  return getRuleContext<HTTPParser::Absolute_pathContext>(0);
}

tree::TerminalNode* HTTPParser::Origin_formContext::QuestionMark() {
  return getToken(HTTPParser::QuestionMark, 0);
}

HTTPParser::QueryContext* HTTPParser::Origin_formContext::query() {
  return getRuleContext<HTTPParser::QueryContext>(0);
}


size_t HTTPParser::Origin_formContext::getRuleIndex() const {
  return HTTPParser::RuleOrigin_form;
}

void HTTPParser::Origin_formContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOrigin_form(this);
}

void HTTPParser::Origin_formContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOrigin_form(this);
}

HTTPParser::Origin_formContext* HTTPParser::origin_form() {
  Origin_formContext *_localctx = _tracker.createInstance<Origin_formContext>(_ctx, getState());
  enterRule(_localctx, 10, HTTPParser::RuleOrigin_form);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    absolute_path();
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HTTPParser::QuestionMark) {
      setState(76);
      match(HTTPParser::QuestionMark);
      setState(77);
      query();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Absolute_pathContext ------------------------------------------------------------------

HTTPParser::Absolute_pathContext::Absolute_pathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HTTPParser::Absolute_pathContext::Slash() {
  return getTokens(HTTPParser::Slash);
}

tree::TerminalNode* HTTPParser::Absolute_pathContext::Slash(size_t i) {
  return getToken(HTTPParser::Slash, i);
}

std::vector<HTTPParser::SegmentContext *> HTTPParser::Absolute_pathContext::segment() {
  return getRuleContexts<HTTPParser::SegmentContext>();
}

HTTPParser::SegmentContext* HTTPParser::Absolute_pathContext::segment(size_t i) {
  return getRuleContext<HTTPParser::SegmentContext>(i);
}


size_t HTTPParser::Absolute_pathContext::getRuleIndex() const {
  return HTTPParser::RuleAbsolute_path;
}

void HTTPParser::Absolute_pathContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAbsolute_path(this);
}

void HTTPParser::Absolute_pathContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAbsolute_path(this);
}

HTTPParser::Absolute_pathContext* HTTPParser::absolute_path() {
  Absolute_pathContext *_localctx = _tracker.createInstance<Absolute_pathContext>(_ctx, getState());
  enterRule(_localctx, 12, HTTPParser::RuleAbsolute_path);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(80);
      match(HTTPParser::Slash);
      setState(81);
      segment();
      setState(84); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HTTPParser::Slash);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SegmentContext ------------------------------------------------------------------

HTTPParser::SegmentContext::SegmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HTTPParser::PcharContext *> HTTPParser::SegmentContext::pchar() {
  return getRuleContexts<HTTPParser::PcharContext>();
}

HTTPParser::PcharContext* HTTPParser::SegmentContext::pchar(size_t i) {
  return getRuleContext<HTTPParser::PcharContext>(i);
}


size_t HTTPParser::SegmentContext::getRuleIndex() const {
  return HTTPParser::RuleSegment;
}

void HTTPParser::SegmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSegment(this);
}

void HTTPParser::SegmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSegment(this);
}

HTTPParser::SegmentContext* HTTPParser::segment() {
  SegmentContext *_localctx = _tracker.createInstance<SegmentContext>(_ctx, getState());
  enterRule(_localctx, 14, HTTPParser::RuleSegment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HTTPParser::ALPHA)
      | (1ULL << HTTPParser::DIGIT)
      | (1ULL << HTTPParser::Minus)
      | (1ULL << HTTPParser::Dot)
      | (1ULL << HTTPParser::Comma)
      | (1ULL << HTTPParser::Underscore)
      | (1ULL << HTTPParser::Tilde)
      | (1ULL << HTTPParser::ExclamationMark)
      | (1ULL << HTTPParser::Colon)
      | (1ULL << HTTPParser::LColumn)
      | (1ULL << HTTPParser::RColumn)
      | (1ULL << HTTPParser::SemiColon)
      | (1ULL << HTTPParser::Equals)
      | (1ULL << HTTPParser::At)
      | (1ULL << HTTPParser::DollarSign)
      | (1ULL << HTTPParser::Ampersand)
      | (1ULL << HTTPParser::Percent)
      | (1ULL << HTTPParser::SQuote)
      | (1ULL << HTTPParser::Star)
      | (1ULL << HTTPParser::Plus))) != 0)) {
      setState(86);
      pchar();
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QueryContext ------------------------------------------------------------------

HTTPParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HTTPParser::PcharContext *> HTTPParser::QueryContext::pchar() {
  return getRuleContexts<HTTPParser::PcharContext>();
}

HTTPParser::PcharContext* HTTPParser::QueryContext::pchar(size_t i) {
  return getRuleContext<HTTPParser::PcharContext>(i);
}

std::vector<tree::TerminalNode *> HTTPParser::QueryContext::Slash() {
  return getTokens(HTTPParser::Slash);
}

tree::TerminalNode* HTTPParser::QueryContext::Slash(size_t i) {
  return getToken(HTTPParser::Slash, i);
}

std::vector<tree::TerminalNode *> HTTPParser::QueryContext::QuestionMark() {
  return getTokens(HTTPParser::QuestionMark);
}

tree::TerminalNode* HTTPParser::QueryContext::QuestionMark(size_t i) {
  return getToken(HTTPParser::QuestionMark, i);
}


size_t HTTPParser::QueryContext::getRuleIndex() const {
  return HTTPParser::RuleQuery;
}

void HTTPParser::QueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery(this);
}

void HTTPParser::QueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery(this);
}

HTTPParser::QueryContext* HTTPParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 16, HTTPParser::RuleQuery);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HTTPParser::ALPHA)
      | (1ULL << HTTPParser::DIGIT)
      | (1ULL << HTTPParser::Minus)
      | (1ULL << HTTPParser::Dot)
      | (1ULL << HTTPParser::Comma)
      | (1ULL << HTTPParser::Underscore)
      | (1ULL << HTTPParser::Tilde)
      | (1ULL << HTTPParser::QuestionMark)
      | (1ULL << HTTPParser::Slash)
      | (1ULL << HTTPParser::ExclamationMark)
      | (1ULL << HTTPParser::Colon)
      | (1ULL << HTTPParser::LColumn)
      | (1ULL << HTTPParser::RColumn)
      | (1ULL << HTTPParser::SemiColon)
      | (1ULL << HTTPParser::Equals)
      | (1ULL << HTTPParser::At)
      | (1ULL << HTTPParser::DollarSign)
      | (1ULL << HTTPParser::Ampersand)
      | (1ULL << HTTPParser::Percent)
      | (1ULL << HTTPParser::SQuote)
      | (1ULL << HTTPParser::Star)
      | (1ULL << HTTPParser::Plus))) != 0)) {
      setState(95);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case HTTPParser::ALPHA:
        case HTTPParser::DIGIT:
        case HTTPParser::Minus:
        case HTTPParser::Dot:
        case HTTPParser::Comma:
        case HTTPParser::Underscore:
        case HTTPParser::Tilde:
        case HTTPParser::ExclamationMark:
        case HTTPParser::Colon:
        case HTTPParser::LColumn:
        case HTTPParser::RColumn:
        case HTTPParser::SemiColon:
        case HTTPParser::Equals:
        case HTTPParser::At:
        case HTTPParser::DollarSign:
        case HTTPParser::Ampersand:
        case HTTPParser::Percent:
        case HTTPParser::SQuote:
        case HTTPParser::Star:
        case HTTPParser::Plus: {
          setState(92);
          pchar();
          break;
        }

        case HTTPParser::Slash: {
          setState(93);
          match(HTTPParser::Slash);
          break;
        }

        case HTTPParser::QuestionMark: {
          setState(94);
          match(HTTPParser::QuestionMark);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Http_versionContext ------------------------------------------------------------------

HTTPParser::Http_versionContext::Http_versionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HTTPParser::Http_nameContext* HTTPParser::Http_versionContext::http_name() {
  return getRuleContext<HTTPParser::Http_nameContext>(0);
}

tree::TerminalNode* HTTPParser::Http_versionContext::Slash() {
  return getToken(HTTPParser::Slash, 0);
}

std::vector<tree::TerminalNode *> HTTPParser::Http_versionContext::DIGIT() {
  return getTokens(HTTPParser::DIGIT);
}

tree::TerminalNode* HTTPParser::Http_versionContext::DIGIT(size_t i) {
  return getToken(HTTPParser::DIGIT, i);
}

tree::TerminalNode* HTTPParser::Http_versionContext::Dot() {
  return getToken(HTTPParser::Dot, 0);
}

std::vector<tree::TerminalNode *> HTTPParser::Http_versionContext::OWS() {
  return getTokens(HTTPParser::OWS);
}

tree::TerminalNode* HTTPParser::Http_versionContext::OWS(size_t i) {
  return getToken(HTTPParser::OWS, i);
}


size_t HTTPParser::Http_versionContext::getRuleIndex() const {
  return HTTPParser::RuleHttp_version;
}

void HTTPParser::Http_versionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHttp_version(this);
}

void HTTPParser::Http_versionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HTTPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHttp_version(this);
}

HTTPParser::Http_versionContext* HTTPParser::http_version() {
  Http_versionContext *_localctx = _tracker.createInstance<Http_versionContext>(_ctx, getState());
  enterRule(_localctx, 18, HTTPParser::RuleHttp_version);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    http_name();
    setState(102);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HTTPParser::OWS) {
      setState(101);
      match(HTTPParser::OWS);
    }
    setState(104);
    match(HTTPParser::Slash);
    setState(106);
    _errHandler->sync(this);
